--- a/Intro_scikit-learn.ipynb
+++ b/Intro_scikit-learn.ipynb
@@ -5,7 +5,7 @@
    "id": "acc1df83",
    "metadata": {},
    "source": [
-    "**Projeto Introdução ao Estudo da Biblioteca Scikit - Learn**\n",
+    "<h1>Projeto Introdução ao Estudo da Biblioteca Scikit - Learn</h1>\n",
     "\n",
     "O Objetivo do projeto é criar um modelo de treino e teste de classificação.\n",
     "\n",
@@ -15,7 +15,7 @@
     "\n",
     "O Modelo também mostra a taxa de acerto que, em inglês, é chamada de accuracy (em português, \"acurácia\"). E pode ser importada através do módulo metrics: \n",
     "\n",
-    "**from sklearn.metrics import accuracy_score**"
+    "<h3>from sklearn.metrics import accuracy_score</h3>"
    ]
   },
   {
