--- a/Intro_scikit-learn.ipynb
+++ b/Intro_scikit-learn.ipynb
@@ -5,7 +5,7 @@
    "id": "acc1df83",
    "metadata": {},
    "source": [
-    "<h1>Projeto Introdução ao Estudo da Biblioteca Scikit - Learn</h1>\n",
+    "<h2>Introdução ao Estudo da Biblioteca Scikit - Learn</h2>\n",
     "\n",
     "O Objetivo do projeto é criar um modelo de treino e teste de classificação.\n",
     "\n",
