--- a/Intro_scikit-learn.ipynb
+++ b/Intro_scikit-learn.ipynb
@@ -9,6 +9,7 @@
     "\n",
     "O Objetivo do projeto é criar um modelo de treino e teste de classificação.\n",
     "\n",
+    "<h3>Etapas,</h3>\n",
     "Foi criado as features(que são os valores) para cada animal. Para cada feature foi usando o 1 = sim (verdadeiro) e 0 = não (falso). Exemplo: Para o dog1 foi criado as features [1,1,0) ou seja, o dog1 não tem pelo longo, não possui garras, e não late. \n",
     "\n",
     "Foi importado também um estimador chamado LinearSVC. O LinearSVC é uma classe que possibilita a criação de um modelo. \n",
